<resources>
    <string name="app_name">Android Nih Bos</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Nama</string>
    <string name="email">Email</string>
    <string name="phone_number">No. Telepon</string>
    <string name="register">Register</string>
    <string name="register_title">Registrasi</string>
    <string name="login">Login</string>
    <string name="register_link">Don\'t have an account? Register here.</string>
    <string name="back">Back</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="select_date">Date</string>
    <string name="start_hour">Start</string>
    <string name="end_hour">End</string>
    <string name="book">Book</string>
    <string name="find">Find</string>
    <string name="cancel">Cancel</string>
    <string name="verify">Verify</string>
    <string name="verify_title">Verification</string>
    <string name="verify_code">Verification Code</string>
    <string name="verify_sub">Silahkan masukan kode verifikasi yang telah dikirim ke email Anda</string>


    <string name="strip">-</string>
    <string name="not_available">Belum ada lapangan yang tersedia. Silahkan cari menggunakan jam atau tanggal yang berbeda!</string>

    <string name="date_format">%1$04d-%2$02d-%3$02d</string>
    <string name="time_format">%02d:00</string>


</resources>