<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <RelativeLayout
        android:id="@+id/backToLoginGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewArrow"
            android:layout_width="9dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_left_arrow"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/backToLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageViewArrow"
            android:layout_marginStart="2dp"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/backToLoginGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="@id/emailLayout"
        app:layout_constraintEnd_toEndOf="@id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:layout_constraintStart_toStartOf="@id/usernameLayout"
        app:layout_constraintEnd_toEndOf="@id/usernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Name field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namaLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noTeleponLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/namaLayout"
        app:layout_constraintStart_toStartOf="@id/namaLayout"
        app:layout_constraintEnd_toEndOf="@id/namaLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noTelepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/noTeleponLayout"
        app:layout_constraintStart_toStartOf="@id/noTeleponLayout"
        app:layout_constraintEnd_toEndOf="@id/noTeleponLayout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    
</androidx.constraintlayout.widget.ConstraintLayout>
